Style: Correction z-index sur skill card

--- a/app/Components/Competences/CompetenceCard.module.css
+++ b/app/Components/Competences/CompetenceCard.module.css
@@ -1,3 +1,7 @@
+.container {
+  z-index: 2;
+}
+
 .container:hover .card {
   z-index: 1;
   transform: scale(1.5) rotateY(360deg);
